# CabanaGhost

./: .gitignore  CMakeLists.txt  CabanaGhostSetup.sh  MODEL.md  README.md
cmake/: Findstream-triggering.cmake
src/: CMakeLists.txt  GOL.cpp  Halo.hpp  Jacobi.cpp  Main.cpp  Mesh.cpp  Mesh.hpp  NestedParallel.hpp  PartitionedHalo.hpp  ProblemManager.cpp  ProblemManager.hpp  SiloWriter.hpp  Solver.hpp
tests/: CMakeLists.txt  GOL.cpp  Jacobi.cpp  ProblemManager.hpp
